# pudimplayer

./: .gitignore  Cargo.toml  pyproject.toml
pudimmusicplayer/: cli.py  spotify.py
