[tool.poetry]
name = "pudimmusicplayer"
version = "0.1.0"
description = ""
authors = ["Ingrid Rosselis <ingridrosselis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyInquirer = "^1.0.3"
spotipy = "^2.9.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.3.5"
flake8 = "^3.7.9"
pydocstyle = "^5.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
